--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dadjokes",
   "version": "0.1.0",
-  "homepage": "http://13ruffles13.github.io/dadjokes",
+  "homepage": "http://13ruffles13.github.io/DadJokes_API",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
